Removed username and added birthdate to user info
