# UserService.Api/Dtos/Requests/ApplicationUserCreateDto.cs
@@ -5,12 +5,10 @@ namespace UserService.Dtos.Requests
     public class ApplicationUserCreateDto
     {
         [Required]
-        public string Username { get; set; }
-
-        [Required]
         public string Password { get; set; }
 
         [EmailAddress]
         public string Email { get; set; }
+    
     }
 }
