# UserService.Api/Dtos/Requests/ApplicationUserLoginDto.cs
@@ -5,7 +5,7 @@ namespace UserService.Dtos.Requests
     public class ApplicationUserLoginDto
     {
         [Required]
-        public string Username { get; set; }
+        public string Email { get; set; }
 
         [Required]
         public string Password { get; set; }
