# UserService.Api/Dtos/Requests/ApplicationUserUpdateDto.cs
@@ -1,3 +1,5 @@
+using System;
+
 namespace UserService.Dtos.Requests
 {
     public class ApplicationUserUpdateDto
@@ -5,6 +7,6 @@ namespace UserService.Dtos.Requests
         public string Password { get; set; }
         public string DisplayName { get; set; }
         public string Bio { get; set; }
-        public bool IsActive { get; set; }
+        public DateTime BirthDate { get; set; }
     }
 }
