# UserService.Api/Dtos/Responses/ApplicationUserReadDto.cs
@@ -1,12 +1,14 @@
+using System;
+
 namespace UserService.Dtos.Responses
 {
     public class ApplicationUserReadDto
     {
         public string Id { get; set; }
         public string Email { get; set; }
-        public string Username { get; set; }
         public string DisplayName { get; set; }
         public string Bio { get; set; }
-        public bool IsActive { get; set; }
+        public DateTime BirthDate { get; set; }
+
     }
 }
