# UserService.Api/Models/ApplicationUser.cs
@@ -7,7 +7,7 @@ namespace UserService.Models
         public string Id { get; set; }
         public string DisplayName { get; set; }
         public string Bio { get; set; }
-        public bool IsActive { get; set; }
+        public DateTime BirthDate { get; set; }
         public DateTime CreatedAt { get; set; }
         public DateTime UpdatedAt { get; set; }
     }
