# UserService.Api/Models/ApplicationUserRead.cs
@@ -1,12 +1,13 @@
+using System;
+
 namespace UserService.Models
 {
     public class ApplicationUserRead
     {
         public string Id { get; set; }
         public string Email { get; set; }
-        public string Username { get; set; }
         public string DisplayName { get; set; }
         public string Bio { get; set; }
-        public bool IsActive { get; set; }
+        public DateTime BirthDate { get; set; }
     }
 }
